fix wrong padding style

--- a/cloudapp/src/app/components/ringumlauf/ringumlauf.component.scss
+++ b/cloudapp/src/app/components/ringumlauf/ringumlauf.component.scss
@@ -1,7 +1,3 @@
-.ringumlauf-barcode-item mat-card-header {
-  margin-left: -16px;
-}
-
 mat-radio-group {
   display: flex;
   flex-direction: column;
