--- a/cloudapp/src/app/components/sternumlauf/sternumlauf.component.scss
+++ b/cloudapp/src/app/components/sternumlauf/sternumlauf.component.scss
@@ -1,7 +1,3 @@
-.sternumlauf-barcode-item mat-card-header {
-  margin-left: -16px;
-}
-
 mat-radio-group {
   display: flex;
   flex-direction: column;
