--- a/cloudapp/src/app/pages/settings/settings.component.scss
+++ b/cloudapp/src/app/pages/settings/settings.component.scss
@@ -1,8 +1,3 @@
-.item-policy,
-mat-card-header {
-  margin-left: -16px;
-}
-
 .item-policy__list {
   display: flex;
   flex-direction: row;
